--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 $menuHeight: calc(100% - 30px);
-$menuWidth: calc(13px + (99% - 200px));
+$menuWidth: calc((100% - 185px));
+$wrapperTranslate: calc(5 * 50px);
 @import '_variables.scss';
 
 
@@ -9,7 +10,10 @@ $menuWidth: calc(13px + (99% - 200px));
     padding: 0;
     
 }
-
+html{
+    scroll-behavior: smooth;
+   
+}
 
 ::-webkit-scrollbar{
     @include lightGreyGlassmorphism;
@@ -28,6 +32,7 @@ $menuWidth: calc(13px + (99% - 200px));
 
 
 .pageNavigation{
+    z-index: 100 !important;
 position: fixed;
 display: inline-block;
 @include lightGreyGlassmorphism;
@@ -37,16 +42,26 @@ top: 0px;
 .logo{
     position: relative;
     top: 0px;
-    left: 0px;
+    left: 5px;
+    z-index: 10;
+    width: 100px;
+    #logoLink{
+    text-decoration: none;
+    color: white;
+    &:hover{
+        text-shadow: 5px 5px 5px 15px black;
+    }
+    }
 }
 .menuWrapper{
     position: absolute;
     bottom: 0px;
-    right: -200px;
-    width: 200px;
-    @include lightWhiteGlassmorphism;
+    right: -185px;
+    width: 185px;
+    // @include lightWhiteGlassmorphism;
     transition: 2s;
     ul{
+        @include lightWhiteGlassmorphism;
         a{
             position: relative;
             width: 100%;
@@ -59,14 +74,48 @@ top: 0px;
             li{
                 list-style-type: none;
                 color: black;
+                
+                &:hover{
+                    @include lightGreyGlassmorphism;
+                }
+            }
+        }
+        li{
+            list-style-type: none;
+            color: black;
+            line-height: 30px;
+            text-align: center;
+            width: 100%;
+            overflow: hidden;
+            &:hover{
+                cursor: pointer;
+                
+            }
+            .timelapseDIY{
+                margin: 0;
+                position: relative;
+                display: none;
+                
+            }
+            .timelapseDIYOn{
+                display: block;
+                
             }
         }
     }
     .loginForm{
         text-align: center;
-        margin: 10px 0px;
+        margin: 0px 0px;
+        
+        padding-top: 10px;
+        padding-bottom: 10px;
+        @include lightWhiteGlassmorphism;
         .buttonsSpace{
+            font-size: 10px;
             margin: 10px 0px;
+            .submitCredentials:hover, .createAccountButton:hover{
+                cursor: pointer;
+            }
         }
     }
     .colorSpace{
@@ -78,9 +127,15 @@ top: 0px;
         .burgerMenu{
             border: none;
             background-color: rgba(0,0,0,0);
-            position: relative;
+            position: absolute;
             top: 1px;
-            left: 170px;
+            right: 10px;
+            &:hover{
+                cursor: pointer;
+                .line{
+                    background-color: lightblue;
+                }
+            }
         .line{
             position: relative;
             width: 25px;
@@ -92,6 +147,8 @@ top: 0px;
     }
 }
 }
+
+
 .menuWrapperOn{
     transition: 2s;
     transform: translateY($menuHeight);
@@ -111,3 +168,478 @@ top: 0px;
     }
 }
 }
+
+
+@media screen and (max-width: 800px){
+    .pageNavigation{
+        width: 100%;
+        .menuWrapper{
+            position: absolute;
+            width: 100%;
+            left: 0px;
+            z-index: 20;
+            background-color: rgba(0,0,0,0);
+            backdrop-filter: none;
+            transition: 2s;
+            ul{
+                .timelapseDIYList{
+                    
+                    line-height: 50px;
+                    font-size: 30px;
+                    ul{
+                        a{
+                            li{
+                            font-size: 20px;
+                            }
+                        }
+                    }
+                }
+                a{
+                    height: 50px;
+                    li{
+                        position: relative;
+                        line-height: 50px;
+                        font-size: 30px;
+                    }
+                }
+            }
+            .loginForm{
+                // min-width: 400px;
+                .loginSpace, .passwordSpace{
+                    font-size: 30px;
+                    .login, .password{
+                        width: 250px;
+                        height: 35px;
+                        font-size: 22px;
+                        padding-left: 10px;
+                        margin: 4px 0px 4px 0px;
+                    }
+                    .login{
+                        margin-left: 43px;
+                    }
+                }
+                .buttonsSpace{
+                    font-size: 18px;
+                .submitCredentials, .createAccountButton {
+                    font-size: 20px;
+                    padding: 5px;
+                }
+            }
+            }
+            .colorSpace{
+                background-color: rgba(0,0,0,0);
+                backdrop-filter: none;
+                transition: 2s;
+                .burgerMenu{
+                    position: absolute;
+                    right: 5px;
+
+                }
+            }
+        }
+        .menuWrapperOn{
+            @include lightWhiteGlassmorphism;
+            transition: 2s;
+            .colorSpace{
+            @include lightGreyGlassmorphism;
+            transition: 2s;
+            }
+        }
+    }
+}
+
+
+.videoBackground{
+    height: 100vh;
+    overflow: hidden;
+.videoBg{
+    position: relative;
+    background-position: center center;
+     z-index: -100;
+     
+}
+.whiteWindow{
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+    width: 100%;
+}
+}
+
+.intro{
+    position: relative;
+    .cloudsStaring{
+        width: 100%;
+        
+    }
+    .headerIntro{
+        position: absolute;
+        direction: rtl;
+        top: 150px;
+        right: 150px;
+        width: 60%;
+        font-size: 2.6em;
+        font-weight: 600;
+        
+    }
+    h1{
+        position: absolute;
+        direction: ltr;
+        top: 70%;
+        left: 150px;
+        color: white;
+        width: 60%;
+        font-size: 2.6em;
+        font-weight: 600;
+        
+    }
+}
+@media only screen and (max-width: 1450px) and (min-width: 800px){
+    .intro{
+        .headerIntro, h1{
+        font-size: 25px;
+        }
+        h1{
+            top: 65%;
+        }
+    }
+}
+
+@media screen and (max-width: 800px){
+    .videoBackground{
+        .videoBg{
+            margin-left: -50%;
+        }
+    }
+    .intro{
+        overflow-x: hidden;
+        .cloudsStaring{
+        height: 100vh;
+        width: auto;
+        left: 50%;
+        // transform: translateX(-50%);
+        }
+        .headerIntro{
+            font-size: 16px;
+            top: 90px;
+            right: 10%;
+            width: 80%;
+        }
+        h1{
+            
+            font-size: 12px;
+            left: 10%;
+            bottom: 10%;
+            width: 80%;
+        }
+    }
+}
+
+
+#timelapseDIY{
+    header{
+        margin-bottom: -110px;
+    .brain{
+        width: 100%;
+        margin-top: -150px;
+        position: relative;
+        margin-bottom: -110px;
+    }
+    h1{
+        font-size: 2.8rem;
+        position: relative;
+        top: -220px;
+        color: white;
+        text-align: center;
+        
+    }
+}
+}
+
+@media screen and (max-width: 900px){
+    #timelapseDIY{
+        width: 100%;
+        header{
+    .brain{
+        height: 100vh;
+        margin-top: -150px;
+        position: relative;
+        margin-bottom: -110px;
+    }
+    h1{
+        font-size: 25px;
+        position: relative;
+        top: -320px;
+        color: white;
+        text-align: center;
+        text-shadow: 1px 1px 2px black,
+                    -1px -1px 2px black;
+    }
+    }
+    }
+}
+
+
+  @for $i from 1 to 7{
+    #cloud#{$i}{
+        height: 100vh;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        background-attachment: fixed;
+        background-repeat:no-repeat;
+        background-position: center center;
+        background-size: cover;
+        background-image: url('images/cloud#{$i}.jpg');
+        .cloudName {
+            position: relative;
+            text-align: center;
+            top: 0;
+            width: 100%;
+            // min-width: 384px;
+            height: 50px;
+            line-height: 50px;
+            font-size: 25px;
+            color: white;
+            background-color: black;
+            opacity: 0.8;
+            
+        }
+        }
+    }
+    
+    
+    
+    @for $i from 1 to 7 {
+        .cloud#{$i} {
+            height:100%;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        color: black;
+            font-size: 35px;
+            opacity: 0;
+            transition: 1s;
+            line-height: 100vh;
+            text-align: center;
+            left: 10%;
+            
+            .stepsContainer{
+                position: relative;
+                margin: 0 25%;
+                width: 70%;
+                height: 90%;
+                
+                border-radius: 0 0 20px 20px;
+                @include lightWhiteGlassmorphism;
+                display: grid;
+                grid-template-columns: 2fr 1fr;
+                grid-template-rows: 1fr;
+                align-items: center;
+                text-align: center;
+                p{
+                    position: relative;
+                    font-size: 20px;
+                    width: 100%;
+                    // min-width: 305px;
+                    height: 100%;
+                    font-family: Arial, Helvetica, sans-serif;
+                    line-height: 25px;
+                    padding: 50px;
+                    display: flex;
+                    align-items: center;
+                }
+                .stepsImages{
+                    position: relative;
+                    padding: 50px 50px 50px 50px;
+                    width: 200px;
+                    
+                }
+            }
+            @media screen and (max-width: 800px) {
+              
+
+                .stepsContainer{
+                    // min-width: 384px;
+                    position: relative;
+                    width: 110%;
+                    height: 100%;
+                    left: -10%;
+                    margin: 0 10% 0 10%;
+                    padding: 0;
+                    display: flex;
+                    flex-direction: column;
+                   p{
+                       width: 80%;
+                       margin: 0;
+                       text-align: center;
+                   }
+                    img{
+                       max-width: 150px;
+                      bottom: 50px;
+                    }
+                }
+                
+            }
+        }  
+    }
+    
+    @for $i from 1 to 7 {
+        .cloudOn#{$i} {
+            @extend .cloud1;
+            width: 110%;
+            left: -15%;
+            transition: 2s;
+            visibility: visible;
+            // overflow: hidden;
+            opacity: 1;
+            // background-color: rgba($color: #fc0000, $alpha: 0.6);
+            
+            @media screen and (max-width: 800px) {
+                left: -10%;
+            }
+        }  
+    }
+
+    #timelapseGalery{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        background-color: red;
+        .actualTimelapse{
+            position: relative;
+            width: 60%;
+            margin-top: -10%;
+            video{
+                width: 100%;
+                
+            }
+        }
+        .timelapseContainer{
+            position: absolute;
+            top: 100%;
+            overflow: hidden;
+            width: 101%;
+            height: auto;
+            left: 0;
+            
+            margin-left: 0px;
+            margin-top: 1%;
+            .timelapses{
+            width: 200%;
+            transition: 2s;
+            .timelapse{
+            position: relative;
+            width: 12%;
+            margin: 1%;
+            display: inline-block;
+            margin: 2px 0 0 0;
+            &:hover{
+                cursor: pointer;
+            }
+        }
+    }
+    .timelapsesOn{
+            transition: 2s;
+        transform: translateX(-48%);
+    }
+    
+      .previousTimelapse{
+          position: absolute;
+          width: 15px;
+          height: 95%;   
+          left: -1px;      
+          border: 1px solid black;
+          background-color: white;
+          z-index: 1;
+          text-align: center;
+          transition: 0.2s;
+          border-radius: 5px 0px 0px 5px;         
+          &:hover{
+              cursor: pointer;
+              background-color: lightgrey;
+              transition: 0.2s;
+          }
+      }
+      .previousTimelapseOn{
+        // opacity: 0.6;
+        background-color: grey;
+         &:hover{
+             cursor: default;
+             background-color: grey;
+         }
+      }
+      .nextTimelapse{
+          position: absolute;
+          width: 15px;
+          height: 95%;   
+          right: -1px;  
+          border: 1px solid black;
+          background-color: white;
+          z-index: 10;
+          text-align: center;
+          transition: 0.2s;
+          border-radius: 0px 5px 5px 0px;
+          bottom: 1px;
+        right: 0%;          
+          &:hover{
+              cursor: pointer;
+              background-color: lightgrey;
+              transition: 0.2s;
+          }
+      }
+      .nextTimelapseOn{
+        //   opacity: 0.6;
+        background-color: grey;
+         &:hover{
+             cursor: default;
+             background-color: grey;
+      }
+    }
+    }
+}
+    @media screen and (max-width: 800px) {
+        #timelapseGalery{
+            
+background-color: blue;
+        .actualTimelapse{
+            top: 0px;
+            width: 90%;
+            .timelapses{
+                width: 200%;
+                
+                .timelapse{
+                    width: 11%;
+                    margin: 0%;
+                }
+            }
+            .timelapsesOn{
+                transition: 2s;
+            transform: translateX(-40%);
+        }
+        }
+        }
+    }
+
+
+    footer{
+        margin: 30px;
+     p{
+         text-align: center;
+     }
+     form{
+         legend{
+             padding: 15px;
+         }
+         fieldset{
+             padding: 10px;
+             span{
+                 margin-bottom: 15px;
+             }
+         }
+     }
+    }
+    
