--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,12 @@
+// SASS REFERENCE
+
 $menuHeight: calc(100% - 30px);
 $menuWidth: calc((100% - 185px));
 $wrapperTranslate: calc(5 * 50px);
 @import '_variables.scss';
 
 
-
+// OVERAL SETTINGS
 *{
     margin: 0;
     padding: 0;
@@ -30,7 +32,7 @@ html{
     }
 }
 
-
+// PAGE NAVIGATION
 .pageNavigation{
     z-index: 100 !important;
 position: fixed;
@@ -53,15 +55,51 @@ top: 0px;
     }
     }
 }
+// DROPDOWN MENU
 .menuWrapper{
     position: absolute;
     bottom: 0px;
     right: -185px;
     width: 185px;
-    // @include lightWhiteGlassmorphism;
     transition: 2s;
     ul{
         @include lightWhiteGlassmorphism;
+        .timelapseDIYList{
+            .timelapseTriangle{
+                
+                margin-top: -15px;
+                margin-bottom: -5px;
+                transform: rotateZ(180deg);
+                animation: timelapseDIYDropdown 1s infinite;
+            }
+            @keyframes timelapseDIYDropdown {
+                0%{
+                    transform: translateY(-2px) rotateZ(180deg);
+                }
+                50%{
+                    transform: translateY(2px) rotateZ(180deg);                    
+                }
+                100%{
+                    transform: translateY(-2px) rotateZ(180deg);                    
+                }
+            }
+            
+            .timelapseTriangleOn{
+                animation: timelapseDIYDropdownOn 1s infinite;
+            }
+            @keyframes timelapseDIYDropdownOn {
+                0%{
+                    transform: translateY(-2px);
+                }
+                50%{
+                    transform: translateY(2px);                    
+                }
+                100%{
+                    transform: translateY(-2px);                    
+                }
+            }
+           
+        }
         a{
             position: relative;
             width: 100%;
@@ -169,7 +207,7 @@ top: 0px;
 }
 }
 
-
+// RWD
 @media screen and (max-width: 800px){
     .pageNavigation{
         width: 100%;
@@ -204,7 +242,6 @@ top: 0px;
                 }
             }
             .loginForm{
-                // min-width: 400px;
                 .loginSpace, .passwordSpace{
                     font-size: 30px;
                     .login, .password{
@@ -248,7 +285,7 @@ top: 0px;
     }
 }
 
-
+// VIDEOBACKGROUND
 .videoBackground{
     height: 100vh;
     overflow: hidden;
@@ -265,7 +302,7 @@ top: 0px;
     width: 100%;
 }
 }
-
+// FIRST ARTICLE
 .intro{
     position: relative;
     .cloudsStaring{
@@ -294,6 +331,7 @@ top: 0px;
         
     }
 }
+// RWD
 @media only screen and (max-width: 1450px) and (min-width: 800px){
     .intro{
         .headerIntro, h1{
@@ -317,7 +355,6 @@ top: 0px;
         height: 100vh;
         width: auto;
         left: 50%;
-        // transform: translateX(-50%);
         }
         .headerIntro{
             font-size: 16px;
@@ -335,6 +372,7 @@ top: 0px;
     }
 }
 
+// SECOND ARTICLE - TIMELAPSE DIY & EASING IN & OUT
 
 #timelapseDIY{
     header{
@@ -355,6 +393,8 @@ top: 0px;
     }
 }
 }
+
+// RWD
 
 @media screen and (max-width: 900px){
     #timelapseDIY{
@@ -379,6 +419,7 @@ top: 0px;
     }
 }
 
+// SECOND ARTICLE - EASING IN & OUT
 
   @for $i from 1 to 7{
     #cloud#{$i}{
@@ -396,7 +437,6 @@ top: 0px;
             text-align: center;
             top: 0;
             width: 100%;
-            // min-width: 384px;
             height: 50px;
             line-height: 50px;
             font-size: 25px;
@@ -441,7 +481,6 @@ top: 0px;
                     position: relative;
                     font-size: 20px;
                     width: 100%;
-                    // min-width: 305px;
                     height: 100%;
                     font-family: Arial, Helvetica, sans-serif;
                     line-height: 25px;
@@ -460,7 +499,6 @@ top: 0px;
               
 
                 .stepsContainer{
-                    // min-width: 384px;
                     position: relative;
                     width: 110%;
                     height: 100%;
@@ -484,22 +522,21 @@ top: 0px;
         }  
     }
     
-    @for $i from 1 to 7 {
-        .cloudOn#{$i} {
+    
+        .easingOn {
             @extend .cloud1;
             width: 110%;
             left: -15%;
             transition: 2s;
             visibility: visible;
-            // overflow: hidden;
             opacity: 1;
-            // background-color: rgba($color: #fc0000, $alpha: 0.6);
-            
             @media screen and (max-width: 800px) {
                 left: -10%;
             }
         }  
-    }
+    
+
+    // THIRD SECTION - TIMELAPSE GALERY
 
     #timelapseGalery{
         width: 100%;
@@ -508,7 +545,7 @@ top: 0px;
         align-items: center;
         justify-content: center;
         position: relative;
-        background-color: red;
+        background-color: lightgrey;
         .actualTimelapse{
             position: relative;
             width: 60%;
@@ -551,13 +588,16 @@ top: 0px;
           position: absolute;
           width: 15px;
           height: 95%;   
-          left: -1px;      
+          left: 0px;      
           border: 1px solid black;
           background-color: white;
           z-index: 1;
           text-align: center;
           transition: 0.2s;
-          border-radius: 5px 0px 0px 5px;         
+          border-radius: 5px 0px 0px 5px;  
+          display: flex;
+          align-items: center; 
+          bottom: 2px;      
           &:hover{
               cursor: pointer;
               background-color: lightgrey;
@@ -565,7 +605,6 @@ top: 0px;
           }
       }
       .previousTimelapseOn{
-        // opacity: 0.6;
         background-color: grey;
          &:hover{
              cursor: default;
@@ -576,14 +615,16 @@ top: 0px;
           position: absolute;
           width: 15px;
           height: 95%;   
-          right: -1px;  
+          right: 0px;  
           border: 1px solid black;
           background-color: white;
           z-index: 10;
           text-align: center;
           transition: 0.2s;
           border-radius: 0px 5px 5px 0px;
-          bottom: 1px;
+          bottom: 2px;
+          display: flex;
+          align-items: center;
         right: 0%;          
           &:hover{
               cursor: pointer;
@@ -592,7 +633,6 @@ top: 0px;
           }
       }
       .nextTimelapseOn{
-        //   opacity: 0.6;
         background-color: grey;
          &:hover{
              cursor: default;
@@ -601,16 +641,17 @@ top: 0px;
     }
     }
 }
+
+// RWD
     @media screen and (max-width: 800px) {
         #timelapseGalery{
             
-background-color: blue;
+
         .actualTimelapse{
             top: 0px;
             width: 90%;
             .timelapses{
                 width: 200%;
-                
                 .timelapse{
                     width: 11%;
                     margin: 0%;
@@ -624,6 +665,8 @@ background-color: blue;
         }
     }
 
+
+    // FOOTER
 
     footer{
         margin: 30px;
@@ -643,3 +686,177 @@ background-color: blue;
      }
     }
     
+    // Create New Account Window
+
+    
+    .registry{
+        position: absolute;
+        min-width: 220px;
+        max-width: 350px;
+        min-height: 400px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 10px;
+        box-shadow: 2px 2px 5px rgba(0,0,0,0.4);
+        @include lightWhiteGlassmorphism;
+        .registryForm{
+            position: relative;
+            top: 15px;
+            fieldset{
+                border: none;
+                legend{
+                    padding: 0 5px 0 5px;
+                    color: black;
+                    margin-bottom: 10px;
+                    border-bottom: 1px solid grey;
+                    width: 96%;
+                    h1{
+                    font-size: 24px;
+                    }
+                    h3{
+                        margin-top: -2px;
+                        font-size: 12px;
+                    }
+                }
+                #newName{
+                    position: relative;
+                    width: 47%;
+                    margin: 5px 1px 5px 1px;
+                    float: left;
+                    height: 25px;
+                    border: 1px solid grey;
+                    padding-left: 3px;
+                }
+                #newSurname{
+                    position: relative;
+                    width: 47%;
+                    margin: 5px 1px 5px 1px;
+                    float: left;
+                    height: 25px;
+                    border: 1px solid grey;
+                    padding-left: 3px;
+                }
+                #newContact{
+                    width: 97%;
+                    margin: 5px 1px 5px 1px;
+                    height: 25px;
+                    border: 1px solid grey;
+                    padding-left: 3px;
+                }
+                #newPassword{
+                    width: 97%;
+                    margin: 5px 1px 5px 1px;
+                    height: 25px;
+                    border: 1px solid grey;
+                    padding-left: 3px;
+                }
+                .birth{
+                    width: 100%;
+                    height: 50px;
+                    margin-left: 2px;
+
+                    p{
+                        font-size: 18px;
+                        margin: 2px;
+                    }
+                    #birthDay{
+                        width: 32%;
+                    }
+                    #birthMonth{
+                        width: 32%;
+                    }
+                    #birthYear{
+                        width: 32%;
+                    }
+
+                }
+                .sex{
+                    width: 100%;
+                    height: 50px;
+                    p{
+                        font-size: 18px;
+                        margin: 2px;
+                    }
+                    .inputs{
+                    width: 30%;
+                    margin: 0 1%;
+                    padding: 1px;
+                    border: 1px solid black;
+                    float: left;
+                    height: 20px;
+                    &:active{
+                        @include lightWhiteGlassmorphism;
+                    }
+                    
+                    input{
+                        margin: 3px;
+                        display: block;
+                        
+                        
+                    }
+                   label{
+                    display: block;
+                    margin-top: -18px;
+                    text-align: center;
+                    &:hover{
+                        cursor: pointer;
+                    }
+                   }
+                    }
+                }
+            }
+        }
+        p{
+            margin: 5px;
+        }
+        #registryButton{
+            position: relative;
+        width: 80%;
+        margin: 0 10%;
+        bottom: -5px;
+        border-radius: 15px;
+        background: rgb(251,225,115);
+background: linear-gradient(90deg, rgba(251,225,115,1) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 75%, rgba(251,225,115,1) 100%);
+        
+        &:hover{
+            cursor: pointer;
+        }
+        }
+    }
+
+    @media screen and (max-width: 800px) {
+        .registry{
+            min-height: 80%;
+            height: 100%;
+            width: 100%;
+            .registryForm{
+                margin-top: 15%;
+                fieldset{
+
+                    .sex{
+                        .inputs{
+                            width: 96%;
+                        }
+        
+                    }
+                }
+            }
+            #registryButton{
+                position: relative;
+                bottom: -10px;
+                height: 25px;
+        font-size: 16px;
+            }
+        }
+    }
+
+    .registryBackground{
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        z-index: -10;
+        overflow: hidden;
+        background: url("images/registry.jpg") no-repeat center;
+        
+    }
