--- a/style.scss
+++ b/style.scss
@@ -5,25 +5,20 @@ $menuWidth: calc((100% - 185px));
 $wrapperTranslate: calc(5 * 50px);
 @import '_variables.scss';
 
-
 // OVERAL SETTINGS
 *{
     margin: 0;
     padding: 0;
-    
 }
 html{
     scroll-behavior: smooth;
-   
 }
 
 ::-webkit-scrollbar{
     @include lightGreyGlassmorphism;
     width: 10px;
-    
 }
 ::-webkit-scrollbar-thumb{
-    
     @include lightWhiteGlassmorphism;
     border-radius: 50px;
     
@@ -33,156 +28,167 @@ html{
 }
 
 // PAGE NAVIGATION
-.pageNavigation{
-    z-index: 100 !important;
-position: fixed;
-display: inline-block;
-@include lightGreyGlassmorphism;
-width: $menuWidth;
-height: 30px;
-top: 0px;
-.logo{
+.pageNavigation {
+  @include lightGreyGlassmorphism;
+  z-index: 100 !important;
+  position: fixed;
+  display: inline-block;
+  width: $menuWidth;
+  height: 30px;
+  top: 0;
+
+  .logo {
     position: relative;
-    top: 0px;
+    top: 0;
     left: 5px;
     z-index: 10;
     width: 100px;
-    #logoLink{
-    text-decoration: none;
-    color: white;
-    &:hover{
+
+    #logoLink {
+      text-decoration: none;
+      color: white;
+
+      &:hover {
         text-shadow: 5px 5px 5px 15px black;
-    }
+      }
     }
 }
 // DROPDOWN MENU
 .menuWrapper{
-    position: absolute;
-    bottom: 0px;
-    right: -185px;
-    width: 185px;
-    transition: 2s;
-    ul{
-        @include lightWhiteGlassmorphism;
-        .timelapseDIYList{
-            .timelapseTriangle{
-                
-                margin-top: -15px;
-                margin-bottom: -5px;
-                transform: rotateZ(180deg);
-                animation: timelapseDIYDropdown 1s infinite;
-            }
-            @keyframes timelapseDIYDropdown {
-                0%{
-                    transform: translateY(-2px) rotateZ(180deg);
-                }
-                50%{
-                    transform: translateY(2px) rotateZ(180deg);                    
-                }
-                100%{
-                    transform: translateY(-2px) rotateZ(180deg);                    
-                }
-            }
-            
-            .timelapseTriangleOn{
-                animation: timelapseDIYDropdownOn 1s infinite;
-            }
-            @keyframes timelapseDIYDropdownOn {
-                0%{
-                    transform: translateY(-2px);
-                }
-                50%{
-                    transform: translateY(2px);                    
-                }
-                100%{
-                    transform: translateY(-2px);                    
-                }
-            }
-           
+  position: absolute;
+  bottom: 0;
+  right: -185px;
+  width: 185px;
+  transition: 2s;
+
+  ul{
+      @include lightWhiteGlassmorphism;
+
+      .timelapseDIYList{
+          .timelapseTriangle{
+              margin-top: -15px;
+              margin-bottom: -5px;
+              transform: rotateZ(180deg);
+              animation: timelapseDIYDropdown 1s infinite;
+          }
+          @keyframes timelapseDIYDropdown {
+              0%{
+                  transform: translateY(-2px) rotateZ(180deg);
+              }
+              50%{
+                  transform: translateY(2px) rotateZ(180deg);
+              }
+              100%{
+                  transform: translateY(-2px) rotateZ(180deg);
+              }
+          }
+
+          .timelapseTriangleOn{
+              animation: timelapseDIYDropdownOn 1s infinite;
+          }
+          @keyframes timelapseDIYDropdownOn {
+              0%{
+                  transform: translateY(-2px);
+              }
+              50%{
+                  transform: translateY(2px);
+              }
+              100%{
+                  transform: translateY(-2px);
+              }
+          }
+
+      }
+      a{
+          position: relative;
+          width: 100%;
+          text-align: center;
+          height: 30px;
+          border: 1px solid black;
+          line-height: 30px;
+          display: block;
+          text-decoration: none;
+          li{
+              list-style-type: none;
+              color: black;
+
+              &:hover{
+                  @include lightGreyGlassmorphism;
+              }
+          }
+      }
+      li{
+          list-style-type: none;
+          color: black;
+          line-height: 30px;
+          text-align: center;
+          width: 100%;
+          overflow: hidden;
+          &:hover{
+              cursor: pointer;
+
+          }
+          .timelapseDIY{
+              margin: 0;
+              position: relative;
+              display: none;
+
+          }
+          .timelapseDIYOn{
+              display: block;
+
+          }
+      }
+  }
+
+  .loginForm{
+      @include lightWhiteGlassmorphism;
+      text-align: center;
+      margin: 0;
+      padding-top: 10px;
+      padding-bottom: 10px;
+
+      .buttonsSpace{
+          font-size: 10px;
+          margin: 10px 0;
+
+          .submitCredentials:hover, .createAccountButton:hover{
+              cursor: pointer;
+          }
+      }
+  }
+
+  .colorSpace {
+      @include lightGreyGlassmorphism;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      height: 30px;
+
+      .burgerMenu {
+        border: none;
+        background-color: rgba(0,0,0,0);
+        position: absolute;
+        top: 1px;
+        right: 10px;
+
+        &:hover {
+          cursor: pointer;
+
+          .line {
+            background-color: lightblue;
+          }
         }
-        a{
-            position: relative;
-            width: 100%;
-            text-align: center;
-            height: 30px;
-            border: 1px solid black;
-            line-height: 30px;
-            display: block;
-            text-decoration: none;
-            li{
-                list-style-type: none;
-                color: black;
-                
-                &:hover{
-                    @include lightGreyGlassmorphism;
-                }
-            }
-        }
-        li{
-            list-style-type: none;
-            color: black;
-            line-height: 30px;
-            text-align: center;
-            width: 100%;
-            overflow: hidden;
-            &:hover{
-                cursor: pointer;
-                
-            }
-            .timelapseDIY{
-                margin: 0;
-                position: relative;
-                display: none;
-                
-            }
-            .timelapseDIYOn{
-                display: block;
-                
-            }
-        }
-    }
-    .loginForm{
-        text-align: center;
-        margin: 0px 0px;
-        
-        padding-top: 10px;
-        padding-bottom: 10px;
-        @include lightWhiteGlassmorphism;
-        .buttonsSpace{
-            font-size: 10px;
-            margin: 10px 0px;
-            .submitCredentials:hover, .createAccountButton:hover{
-                cursor: pointer;
-            }
-        }
-    }
-    .colorSpace{
-        position: relative;
-        bottom: 0px;
-        width: 100%;
-        height: 30px;
-        @include lightGreyGlassmorphism;
-        .burgerMenu{
-            border: none;
-            background-color: rgba(0,0,0,0);
-            position: absolute;
-            top: 1px;
-            right: 10px;
-            &:hover{
-                cursor: pointer;
-                .line{
-                    background-color: lightblue;
-                }
-            }
+
         .line{
-            position: relative;
-            width: 25px;
-            height: 4px;
-            margin: 4px 0px;
-            background-color: white;
-            transition: 2s;
+          position: relative;
+          width: 25px;
+          height: 4px;
+          margin: 4px 0;
+          background-color: white;
+          transition: 2s;
         }
-    }
+  }
 }
 }
 
